--- a/docs/assets/style.css
+++ b/docs/assets/style.css
@@ -46,28 +46,38 @@ p a {
     text-decoration: underline;
 }
 h1{
-    font-size: 140% !important;
+    font-size: 145% !important;
     font-weight: bold;
 }
 h2{
-    font-size: 130% !important;
+    font-size: 140% !important;
     font-weight: bold;
 }
 h3{
-    font-size: 115% !important;
+    font-size: 125% !important;
     font-weight: bold;
 }
 .amr-option-group {
-    margin-top: 32px;
     padding: 24px;
     width: 100%;
-    box-shadow: 0 14px 28px rgba(107, 107, 107, 0.25), 0 10px 10px rgba(94, 94, 94, 0.22);
-    background-color: rgba(17, 24, 38, 0.75);
+    background-color: rgb(17, 24, 39);
 
 }
+.side-picture-background {
+    background-color: rgb(17, 24, 39);
+}
+
+.side-image {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 30%;
+
+}
+div.ext-box { display: table; height: 100%; width:100%;}
+div.int-box { display: table-cell; vertical-align: middle; }
 .radio-group{
     width: 100%;
-
 }
 .form-control{
     transition: all 1.9s;
@@ -116,6 +126,7 @@ h3{
 .radio label:hover {
     transition: 0.2s ease;
     transform: scale(1.02, 1.02);
+    color: white;
     box-shadow: 0 1px 3px rgba(213, 213, 213, 0.56), 0 1px 2px rgba(161, 161, 161, 0.65);
 }
 
